<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <TextView
            style="@style/text_base"
            android:text="@string/calculate_params"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/text_base"
                android:text="@string/pipe_material"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/text_base"
                android:text="@string/pipe_diameter"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/text_base"
                android:text="@string/water_flux"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/text_base"
                android:text="@string/pipe_length"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/text_base"
            android:text="@string/calculated_result"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/text_base"
                android:text="@string/water_flux"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/text_base"
                android:text="@string/flow_rate"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/text_base"
                android:text="@string/unit_head_loss"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/text_base"
                android:text="@string/m_m"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/text_base"
                android:text="@string/head_loss"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/text_base"
                android:text="@string/m"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>