<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <TextView
            style="@style/text_base"
            android:gravity="center"
            android:minHeight="40dp"
            android:text="@string/calculate_params"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            style="@style/text_base"
            android:gravity="center"
            android:minHeight="40dp"
            android:text="@string/calculated_result"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                style="@style/text_base"
                android:text="@string/head_loss"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/text_base"
                android:text="@string/m"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>